--- a/Kcamera/Base.lproj/Main.storyboard
+++ b/Kcamera/Base.lproj/Main.storyboard
@@ -48,10 +48,37 @@
                                             <action selector="cameraModelChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="lec-mt-uHk"/>
                                         </connections>
                                     </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gri-AB-XTp" userLabel="StatusView">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OBR-Vc-b9H" userLabel="Switch">
+                                                <rect key="frame" x="264" y="0.0" width="56" height="48"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="48" id="TDf-8u-Xhw"/>
+                                                    <constraint firstAttribute="width" constant="56" id="ixH-me-d2d"/>
+                                                </constraints>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <state key="normal" image="camera_icon"/>
+                                                <connections>
+                                                    <action selector="switchCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y1w-gi-Tgc"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="48" id="GfH-JF-ZDI"/>
+                                            <constraint firstAttribute="trailing" secondItem="OBR-Vc-b9H" secondAttribute="trailing" id="fai-Kr-M71"/>
+                                            <constraint firstAttribute="bottom" secondItem="OBR-Vc-b9H" secondAttribute="bottom" id="p7b-e0-2Dv"/>
+                                            <constraint firstItem="OBR-Vc-b9H" firstAttribute="top" secondItem="gri-AB-XTp" secondAttribute="top" id="yG4-iz-aav"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="xuI-Bs-GjJ" secondAttribute="bottom" id="A7k-fi-fV6"/>
+                                    <constraint firstItem="gri-AB-XTp" firstAttribute="top" secondItem="VB2-84-6wU" secondAttribute="top" id="BCu-N0-Kjo"/>
+                                    <constraint firstItem="gri-AB-XTp" firstAttribute="leading" secondItem="VB2-84-6wU" secondAttribute="leading" id="Ceg-2w-AWP"/>
+                                    <constraint firstAttribute="trailing" secondItem="gri-AB-XTp" secondAttribute="trailing" id="MmS-d4-LIo"/>
                                     <constraint firstItem="xuI-Bs-GjJ" firstAttribute="leading" secondItem="VB2-84-6wU" secondAttribute="leading" id="eu6-Vg-TV6"/>
                                     <constraint firstAttribute="trailing" secondItem="xuI-Bs-GjJ" secondAttribute="trailing" id="kfx-v2-HNZ"/>
                                 </constraints>
@@ -78,4 +105,7 @@
             <point key="canvasLocation" x="278" y="339"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="camera_icon" width="28" height="21"/>
+    </resources>
 </document>
