--- a/Kcamera/Base.lproj/Main.storyboard
+++ b/Kcamera/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VB2-84-6wU" userLabel="controView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VB2-84-6wU" userLabel="controView" customClass="ControlView" customModule="Kcamera" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xuI-Bs-GjJ" customClass="CameraModeView" customModule="Kcamera" customModuleProvider="target">
@@ -48,7 +48,7 @@
                                             <action selector="cameraModelChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="lec-mt-uHk"/>
                                         </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gri-AB-XTp" userLabel="StatusView">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gri-AB-XTp" userLabel="StatusView" customClass="StatusView" customModule="Kcamera" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OBR-Vc-b9H" userLabel="Switch">
@@ -82,6 +82,10 @@
                                     <constraint firstItem="xuI-Bs-GjJ" firstAttribute="leading" secondItem="VB2-84-6wU" secondAttribute="leading" id="eu6-Vg-TV6"/>
                                     <constraint firstAttribute="trailing" secondItem="xuI-Bs-GjJ" secondAttribute="trailing" id="kfx-v2-HNZ"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="modeView" destination="xuI-Bs-GjJ" id="7oM-WB-VeJ"/>
+                                    <outlet property="statusView" destination="gri-AB-XTp" id="TKj-WW-qrt"/>
+                                </connections>
                             </view>
                         </subviews>
                         <constraints>
